# ProducerConsumer

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/: buffer.cpp  consumer.cpp  data.cpp  main.cpp  producer.cpp  product.cpp  transporter.cpp
